--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,6 +32,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+}
+
+h1, h2 {
+  font-family: 'Cormorant Garamond', serif;
 }
 
 h1 {
